syntax = "proto3";
package api;
option go_package = "app/api";

message UserCreateRequest {
  string login = 1;
  string password = 2;
}

message UserUpdateRequest {
  string uid = 1;
  string login = 2;
  string password = 3;
}

message UserCreateResponse {
  string uid = 1;
}

message UserGetRequest {
  string uid = 1;
}

message UserGetResponse {
  string uid = 1;
  string login = 2;
}

message UserGetAllRequest {}

message UserUpdateResponse {}

message UserGetAllResponse {
  repeated UserGetResponse users = 1;
}

service User {
  rpc create(UserCreateRequest) returns (UserCreateResponse);
  rpc get(UserGetRequest) returns (UserGetResponse);
  rpc getAll(UserGetAllRequest) returns (UserGetAllResponse);
  rpc update(UserUpdateRequest) returns (UserUpdateResponse);
}